--- a/index.html
+++ b/index.html
@@ -838,9 +838,9 @@
       document.getElementById("playerName").focus();
       
       // Try to lock orientation on mobile
-      if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-        lockOrientation();
-      }
+      //if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        //lockOrientation();
+      //}
     };
   </script>
 </body>
