--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
       "Quraisy": [
         { arabic: "لِإِيلَافِ قُرَيْشٍ", arti: "Karena kebiasaan orang-orang Quraisy," },
         { arabic: "إِيلَافِهِمْ رِحْلَةَ الشِّتَاءِ وَالصَّيْفِ", arti: "(yaitu) kebiasaan mereka bepergian pada musim dingin dan musim panas." },
-        { arabic: "فَلْيَعْبُдُوا رَبَّ هَذَا الْبَيْتِ", arti: "Maka hendaklah mereka menyembah Tuhan (pemilik) rumah ini (Ka'bah)," },
+        { arabic: "فَلْيَعْبُدُوا رَبَّ هَذَا الْبَيْتِ", arti: "Maka hendaklah mereka menyembah Tuhan (pemilik) rumah ini (Ka'bah)," },
         { arabic: "الَّذِي أَطْعَمَهُمْ مِنْ جُوعٍ وَآمَنَهُمْ مِنْ خَوْفٍ", arti: "Yang telah memberi makanan kepada mereka untuk menghilangkan lapar dan mengamankan mereka dari rasa ketakutan." }
       ]
     };
